name:                advent2017
version:             0.1.0.0
synopsis:            Advent of code 2017 solutions in Haskell
homepage:            https://github.com/makemeunsee/advent2017#readme
license:             GPL-3
license-file:        LICENSE
author:              makemeunsee
maintainer:          makemeunsee
copyright:           makemeunsee
category:            katas
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/makemeunsee/advent2017#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable advent2017-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent2017
                     , split
                     , containers
                     , ListZipper
                     , text
                     , regex-compat-tdfa
  default-language:    Haskell2010

test-suite advent2017-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , advent2017
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/makemeunsee/advent2017
